# docs/swagger.json
@@ -73,6 +73,17 @@
                 }
             }
         },
+        "models.Auth": {
+            "type": "object",
+            "properties": {
+                "login": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Button": {
             "type": "object",
             "properties": {
